# PixelVAR

./: .gitignore  Makefile  README.md  TA_MEETING_CHECKLIST.md  pyproject.toml  requirements.txt  setup.py
configs/: default.py
configs/train/: debug1k.yaml  overfit32.yaml  v0_full.yaml
data/processed/pokemon/: palette.json
docs/: day1_checkpoint.md  design_contract.md  option_a_runbook.md  workflow.md
notebooks/: 01_data_pipeline_demo.ipynb
pixelvar/: __init__.py
pixelvar/data/: __init__.py  datamodule.py  dataset.py  palette.py  splits.py
pixelvar/models/: __init__.py  var_transformer.py
pixelvar/tokenizers/: __init__.py  base.py  deterministic.py
pixelvar/training/: __init__.py  lit_var.py
pixelvar/utils/: __init__.py  config.py  render.py
reports/debug1k_diagnostics/: debug1k_metrics.csv  debug1k_report.md  overfit32_metrics.csv  overfit32_report.md  palette.json
reports/v0_full_diagnostics/: metrics_summary.md  run_report.md  splits.json
reports/v0_sample_sweep/: v0_full_metrics.csv
scripts/: check_data.py  download_data.py  make_splits.py  preprocess_data.py  sample_var.py  smoke.py  train_var.py  visualize.py
tests/: test_dataset.py  test_deterministic_pyramid.py  test_imports.py  test_model.py  test_palette_transparency.py  test_splits.py  test_tokenizer.py
